# cartesia_hackathon

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: cartesia_stt.py  config.py  main.py  pipeline.py  pyproject.toml  server.py  user_profile.py  video_download.py
agent/commentators/: base.py  coach_kay.py  danny.py  rookie.py  voice_manager.py
agent/instructions/: coach_kay.md  coach_kay_football.md  commentary.md  commentary_football.md  danny.md  danny_football.md  rookie.md  rookie_football.md
agent/processors/: __init__.py  detection_processor.py  events.py  sports_processor.py
extension/: package-lock.json  package.json  speech-recognition.d.ts  wxt.config.ts
extension/.output/chrome-mv3/: background.js  manifest.json  offscreen.html  sidepanel.html  youtube-sandbox.html
extension/.output/chrome-mv3-dev/: background.js  manifest.json  offscreen.html  sidepanel.html
extension/.output/chrome-mv3-dev/content-scripts/: content.js
extension/.wxt/types/: paths.d.ts
extension/entrypoints/: background.ts  content.ts
extension/entrypoints/offscreen/: index.html  main.ts
extension/entrypoints/sidepanel/: App.tsx  DetectionDebug.tsx  ProfileSetup.tsx  YouTubePlayer.tsx  index.html
extension/lib/: constants.ts  messages.ts
extension/public/: mic-permission.html  mic-permission.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CommentaryOverlay.tsx  ProfileSetup.tsx  URLInput.tsx  VideoPlayer.tsx  VideoRoom.tsx
frontend/src/hooks/: useStreamVideo.ts
(+9 files in other folders)
